@@ -10,7 +10,7 @@ Homepage: http://pqxx.org
 Package: libpqxx-dev
 Section: libdevel
 Architecture: any
-Depends: libpq-dev (>= 8.0.3-1), libpqxx-3.0.0 (= ${binary:Version}), pkg-config
+Depends: libpq-dev (>= 8.0.3-1), libpqxx-3.1 (= ${binary:Version}), pkg-config
 Suggests: libpqxx-doc
 Description: C++ library to connect to PostgreSQL (development files)
  C++ library to enable user programs to communicate with
@@ -31,7 +31,7 @@ Description: C++ library to connect to PostgreSQL (documentation)
  .
  This package contains documentation and examples.
 
-Package: libpqxx-3.0.0
+Package: libpqxx-3.1
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}
@@ -41,11 +41,11 @@ Description: C++ library to connect to PostgreSQL
  be local or it may be on another machine, accessed via
  TCP/IP. This package obsoletes the libpqpp package.
 
-Package: libpqxx-3.0.0-dbg
+Package: libpqxx-3.1-dbg
 Section: libdevel
 Priority: extra
 Architecture: any
-Depends: libpqxx-3.0.0 (= ${binary:Version})
+Depends: libpqxx-3.1 (= ${binary:Version})
 Description: C++ library to connect to PostgreSQL (debugging symbols)
  C++ library to enable user programs to communicate with
  the PostgreSQL database back-end.
